# grandr_applet

./: .gitignore  AUTHORS  ChangeLog  GrandrApplet.server  GrandrApplet.server.in  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  gnome-randr-applet_0.2.orig.tar.gz.delta  gnome-randr-applet_0.2.orig.tar.gz.id  gnome-randr-applet_0.4.1.orig.tar.gz.delta  gnome-randr-applet_0.4.1.orig.tar.gz.id  grandr_applet.spec  grandr_applet.spec.in  mkinstalldirs
debian/: .gitignore  changelog  control  copyright  dirs  rules  shlibs.local  watch
debian/patches/: on-and-off
po/: Makefile.in.in  POTFILES.in  en.gmo  en.po  grandr_applet.pot  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  grandr.c
